--- a/arch/arm64/boot/dts/exynos7870-j7xelte_eur_open_04.dts
+++ b/arch/arm64/boot/dts/exynos7870-j7xelte_eur_open_04.dts
@@ -606,4 +606,22 @@
 			stk,transmittance = <500>;
 		};
 	};
+
+	firmware {
+		android {
+			compatible = "android,firmware";
+			fstab {
+				compatible = "android,fstab";
+				system {
+					compatible = "android,system";
+					dev = "/dev/block/platform/13540000.dwmmc0/by-name/SYSTEM";
+					type = "ext4";
+					mnt_flags = "ro,barrier=1";
+					fsmgr_flags = "wait";
+					status = "ok";
+				};
+
+			};
+		};
+	};
 };
